compiler/generated/DWQMIParser.cpp

// Generated from DWQMI.g4 by ANTLR 4.7.1


#include "DWQMIListener.h"

#include "DWQMIParser.h"


using namespace antlrcpp;
using namespace dwqmi;
using namespace antlr4;

DWQMIParser::DWQMIParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

DWQMIParser::~DWQMIParser() {
  delete _interpreter;
}

std::string DWQMIParser::getGrammarFileName() const {
  return "DWQMI.g4";
}

const std::vector<std::string>& DWQMIParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& DWQMIParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainprogContext ------------------------------------------------------------------

DWQMIParser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::ProgramContext* DWQMIParser::MainprogContext::program() {
  return getRuleContext<DWQMIParser::ProgramContext>(0);
}


size_t DWQMIParser::MainprogContext::getRuleIndex() const {
  return DWQMIParser::RuleMainprog;
}

void DWQMIParser::MainprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprog(this);
}

void DWQMIParser::MainprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprog(this);
}

DWQMIParser::MainprogContext* DWQMIParser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 0, DWQMIParser::RuleMainprog);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    program();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

DWQMIParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DWQMIParser::LineContext *> DWQMIParser::ProgramContext::line() {
  return getRuleContexts<DWQMIParser::LineContext>();
}

DWQMIParser::LineContext* DWQMIParser::ProgramContext::line(size_t i) {
  return getRuleContext<DWQMIParser::LineContext>(i);
}


size_t DWQMIParser::ProgramContext::getRuleIndex() const {
  return DWQMIParser::RuleProgram;
}

void DWQMIParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void DWQMIParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

DWQMIParser::ProgramContext* DWQMIParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, DWQMIParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(36);
      line();
      setState(39); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << DWQMIParser::T__0)
      | (1ULL << DWQMIParser::COMMENT)
      | (1ULL << DWQMIParser::ANNEAL)
      | (1ULL << DWQMIParser::INT)
      | (1ULL << DWQMIParser::EOL))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

DWQMIParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::LineContext::EOL() {
  return getToken(DWQMIParser::EOL, 0);
}

std::vector<DWQMIParser::StatementContext *> DWQMIParser::LineContext::statement() {
  return getRuleContexts<DWQMIParser::StatementContext>();
}

DWQMIParser::StatementContext* DWQMIParser::LineContext::statement(size_t i) {
  return getRuleContext<DWQMIParser::StatementContext>(i);
}

DWQMIParser::CommentContext* DWQMIParser::LineContext::comment() {
  return getRuleContext<DWQMIParser::CommentContext>(0);
}


size_t DWQMIParser::LineContext::getRuleIndex() const {
  return DWQMIParser::RuleLine;
}

void DWQMIParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void DWQMIParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

DWQMIParser::LineContext* DWQMIParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 4, DWQMIParser::RuleLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::T__0:
      case DWQMIParser::ANNEAL:
      case DWQMIParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(42); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(41);
          statement();
          setState(44); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << DWQMIParser::T__0)
          | (1ULL << DWQMIParser::ANNEAL)
          | (1ULL << DWQMIParser::INT))) != 0));
        setState(46);
        match(DWQMIParser::EOL);
        break;
      }

      case DWQMIParser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(48);
        comment();
        break;
      }

      case DWQMIParser::EOL: {
        enterOuterAlt(_localctx, 3);
        setState(49);
        match(DWQMIParser::EOL);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

DWQMIParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::AnnealdeclContext* DWQMIParser::StatementContext::annealdecl() {
  return getRuleContext<DWQMIParser::AnnealdeclContext>(0);
}

DWQMIParser::InstContext* DWQMIParser::StatementContext::inst() {
  return getRuleContext<DWQMIParser::InstContext>(0);
}


size_t DWQMIParser::StatementContext::getRuleIndex() const {
  return DWQMIParser::RuleStatement;
}

void DWQMIParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void DWQMIParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

DWQMIParser::StatementContext* DWQMIParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, DWQMIParser::RuleStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::T__0:
      case DWQMIParser::ANNEAL: {
        enterOuterAlt(_localctx, 1);
        setState(53);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == DWQMIParser::ANNEAL) {
          setState(52);
          annealdecl();
        }
        setState(55);
        match(DWQMIParser::T__0);
        break;
      }

      case DWQMIParser::INT: {
        enterOuterAlt(_localctx, 2);
        setState(56);
        inst();
        setState(57);
        match(DWQMIParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

DWQMIParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::CommentContext::COMMENT() {
  return getToken(DWQMIParser::COMMENT, 0);
}


size_t DWQMIParser::CommentContext::getRuleIndex() const {
  return DWQMIParser::RuleComment;
}

void DWQMIParser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void DWQMIParser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

DWQMIParser::CommentContext* DWQMIParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 8, DWQMIParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(DWQMIParser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstContext ------------------------------------------------------------------

DWQMIParser::InstContext::InstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> DWQMIParser::InstContext::INT() {
  return getTokens(DWQMIParser::INT);
}

tree::TerminalNode* DWQMIParser::InstContext::INT(size_t i) {
  return getToken(DWQMIParser::INT, i);
}

DWQMIParser::RealContext* DWQMIParser::InstContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}


size_t DWQMIParser::InstContext::getRuleIndex() const {
  return DWQMIParser::RuleInst;
}

void DWQMIParser::InstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInst(this);
}

void DWQMIParser::InstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInst(this);
}

DWQMIParser::InstContext* DWQMIParser::inst() {
  InstContext *_localctx = _tracker.createInstance<InstContext>(_ctx, getState());
  enterRule(_localctx, 10, DWQMIParser::RuleInst);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(DWQMIParser::INT);
    setState(64);
    match(DWQMIParser::INT);
    setState(65);
    real();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnealdeclContext ------------------------------------------------------------------

DWQMIParser::AnnealdeclContext::AnnealdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::AnnealContext* DWQMIParser::AnnealdeclContext::anneal() {
  return getRuleContext<DWQMIParser::AnnealContext>(0);
}

DWQMIParser::TaContext* DWQMIParser::AnnealdeclContext::ta() {
  return getRuleContext<DWQMIParser::TaContext>(0);
}

DWQMIParser::TpContext* DWQMIParser::AnnealdeclContext::tp() {
  return getRuleContext<DWQMIParser::TpContext>(0);
}

DWQMIParser::TqContext* DWQMIParser::AnnealdeclContext::tq() {
  return getRuleContext<DWQMIParser::TqContext>(0);
}

DWQMIParser::DirectionContext* DWQMIParser::AnnealdeclContext::direction() {
  return getRuleContext<DWQMIParser::DirectionContext>(0);
}


size_t DWQMIParser::AnnealdeclContext::getRuleIndex() const {
  return DWQMIParser::RuleAnnealdecl;
}

void DWQMIParser::AnnealdeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnnealdecl(this);
}

void DWQMIParser::AnnealdeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnnealdecl(this);
}

DWQMIParser::AnnealdeclContext* DWQMIParser::annealdecl() {
  AnnealdeclContext *_localctx = _tracker.createInstance<AnnealdeclContext>(_ctx, getState());
  enterRule(_localctx, 12, DWQMIParser::RuleAnnealdecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    anneal();
    setState(68);
    ta();
    setState(69);
    tp();
    setState(70);
    tq();
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == DWQMIParser::T__1

    || _la == DWQMIParser::T__2) {
      setState(71);
      direction();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TaContext ------------------------------------------------------------------

DWQMIParser::TaContext::TaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::IdContext* DWQMIParser::TaContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}

DWQMIParser::RealContext* DWQMIParser::TaContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}


size_t DWQMIParser::TaContext::getRuleIndex() const {
  return DWQMIParser::RuleTa;
}

void DWQMIParser::TaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTa(this);
}

void DWQMIParser::TaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTa(this);
}

DWQMIParser::TaContext* DWQMIParser::ta() {
  TaContext *_localctx = _tracker.createInstance<TaContext>(_ctx, getState());
  enterRule(_localctx, 14, DWQMIParser::RuleTa);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(74);
        id();
        break;
      }

      case DWQMIParser::REAL: {
        enterOuterAlt(_localctx, 2);
        setState(75);
        real();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TpContext ------------------------------------------------------------------

DWQMIParser::TpContext::TpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::IdContext* DWQMIParser::TpContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}

DWQMIParser::RealContext* DWQMIParser::TpContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}


size_t DWQMIParser::TpContext::getRuleIndex() const {
  return DWQMIParser::RuleTp;
}

void DWQMIParser::TpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTp(this);
}

void DWQMIParser::TpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTp(this);
}

DWQMIParser::TpContext* DWQMIParser::tp() {
  TpContext *_localctx = _tracker.createInstance<TpContext>(_ctx, getState());
  enterRule(_localctx, 16, DWQMIParser::RuleTp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        id();
        break;
      }

      case DWQMIParser::REAL: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        real();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TqContext ------------------------------------------------------------------

DWQMIParser::TqContext::TqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::IdContext* DWQMIParser::TqContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}

DWQMIParser::RealContext* DWQMIParser::TqContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}


size_t DWQMIParser::TqContext::getRuleIndex() const {
  return DWQMIParser::RuleTq;
}

void DWQMIParser::TqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTq(this);
}

void DWQMIParser::TqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTq(this);
}

DWQMIParser::TqContext* DWQMIParser::tq() {
  TqContext *_localctx = _tracker.createInstance<TqContext>(_ctx, getState());
  enterRule(_localctx, 18, DWQMIParser::RuleTq);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(82);
        id();
        break;
      }

      case DWQMIParser::REAL: {
        enterOuterAlt(_localctx, 2);
        setState(83);
        real();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnealContext ------------------------------------------------------------------

DWQMIParser::AnnealContext::AnnealContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::AnnealContext::ANNEAL() {
  return getToken(DWQMIParser::ANNEAL, 0);
}


size_t DWQMIParser::AnnealContext::getRuleIndex() const {
  return DWQMIParser::RuleAnneal;
}

void DWQMIParser::AnnealContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnneal(this);
}

void DWQMIParser::AnnealContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnneal(this);
}

DWQMIParser::AnnealContext* DWQMIParser::anneal() {
  AnnealContext *_localctx = _tracker.createInstance<AnnealContext>(_ctx, getState());
  enterRule(_localctx, 20, DWQMIParser::RuleAnneal);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(DWQMIParser::ANNEAL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdContext ------------------------------------------------------------------

DWQMIParser::IdContext::IdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::IdContext::ID() {
  return getToken(DWQMIParser::ID, 0);
}


size_t DWQMIParser::IdContext::getRuleIndex() const {
  return DWQMIParser::RuleId;
}

void DWQMIParser::IdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterId(this);
}

void DWQMIParser::IdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitId(this);
}

DWQMIParser::IdContext* DWQMIParser::id() {
  IdContext *_localctx = _tracker.createInstance<IdContext>(_ctx, getState());
  enterRule(_localctx, 22, DWQMIParser::RuleId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(DWQMIParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RealContext ------------------------------------------------------------------

DWQMIParser::RealContext::RealContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::RealContext::REAL() {
  return getToken(DWQMIParser::REAL, 0);
}


size_t DWQMIParser::RealContext::getRuleIndex() const {
  return DWQMIParser::RuleReal;
}

void DWQMIParser::RealContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReal(this);
}

void DWQMIParser::RealContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReal(this);
}

DWQMIParser::RealContext* DWQMIParser::real() {
  RealContext *_localctx = _tracker.createInstance<RealContext>(_ctx, getState());
  enterRule(_localctx, 24, DWQMIParser::RuleReal);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(DWQMIParser::REAL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringContext ------------------------------------------------------------------

DWQMIParser::StringContext::StringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::StringContext::STRING() {
  return getToken(DWQMIParser::STRING, 0);
}


size_t DWQMIParser::StringContext::getRuleIndex() const {
  return DWQMIParser::RuleString;
}

void DWQMIParser::StringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterString(this);
}

void DWQMIParser::StringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitString(this);
}
